@@ -1,5 +1,9 @@
 [b]Version 0.6.5[/b]:
 
+(2008-11-06)
+ * (Experimental) Added the possibility to select the adaptor for xv. Requires
+   at least MPlayer SVN r26762 (from 2008-05-13).
+
 (2008-11-05)
  * Added support for another patch: 
    http://smplayer.svn.sourceforge.net/viewvc/smplayer/mplayer-builds/patches/id_exit.diff
